[package]
name = "gpl-session"
version = "2.0.1"
edition = "2021"
authors = ["Gum Core Dev <dev@magicblock.gg>"]
license = "GPL-3.0-or-later"
description = "Gum Session Protocol (GPL Session)"
repository = "https://github.com/magicblock-labs/gum-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_session"

[features]
no-entrypoint = ["gpl-session-macros"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.28.0"
solana-security-txt = "1.1.0"
gpl-session-macros = { version = "0.1.0", path = "macros", optional = true }
