[package]
name = "session-keys"
version = { workspace = true }
edition = "2021"
authors = ["Gum Core Dev <dev@magicblock.gg>"]
license = "GPL-3.0-or-later"
description = "Gum Session Protocol (GPL Session)"
repository = "https://github.com/magicblock-labs/gum-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_keys"

[features]
no-entrypoint = ["session-keys-macros"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "^0"
solana-security-txt = "^1.1.1"
session-keys-macros = { workspace = true, path = "macros", optional = true }
