[package]
name = "session-keys-macros"
version = { workspace = true }
edition = "2021"
authors = ["Magicblock Dev <dev@magicblock.gg>"]
license = "GPL-3.0-or-later"
description = "GPL Session Macros"
repository = "https://github.com/magicblock-labs/gum-program-library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
session-keys-macros-attribute = { workspace = true , path = "attribute" }
